@@ -1,3 +1,7 @@
+2009-06-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* audio.cpp|h: Add support for dumping raw audio data to a file.
+
 2009-06-25  Alan McGovern  <amcgovern@novell.com>
 
 	* dependencyproperty.g.cpp: Regen
